adding restart button

--- a/src/components/square.css
+++ b/src/components/square.css
@@ -5,6 +5,7 @@
   cursor: pointer;
   background-color: gray;
   font-size: 5rem;
+  text-align: center;
 }
 
 .square:hover {
@@ -20,4 +21,12 @@
   text-align: center;
   margin-bottom: 1rem;
   font-weight: 600;
+}
+
+@media (max-width: 480px) {
+  .square {
+    width: 80px;
+    height: 80px;
+    font-size: 1rem;
+  }
 }
