--- a/src/components/board.css
+++ b/src/components/board.css
@@ -8,3 +8,27 @@
 .board-row {
   display: flex;
 }
+
+@media (max-width: 480px) {
+  .board {
+    width: 240px;
+    height: 240px;
+    border: 1px solid black;
+    margin: 0 auto;
+  }
+}
+
+.restart-button {
+  display: block;
+  margin: 1rem auto;
+  border: 1px solid black;
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+  padding: 0.5rem 1rem;
+}
+
+.restart-button:hover {
+  background-color: black;
+  color: white;
+}
